AC_INIT([appraw], [0.1], [ant007h@gmail.com])
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR([appraw.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdio.h stdlib.h string.h malloc.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

